# ZS23_FJP_Kimlova_Zappe

./: .gitmodules  CMakeLists.txt  README.md  grammar.bnf  input.txt  input.yadc
doc/: bodiky  checklist.txt  grammar.bnf
examples/: 01_hello_world.yadc  02_types.yadc  03_if_else_and_goto.yadc  04_loop_statements.yadc  05_functions.yadc  06_io.yadc  07_strings.yadc  08_casting.yadc  09_stack_heap_pointers.yadc  10_pointers_and_arrays.yadc  13_float.yadc  casting.txt  else_statement.txt  fibonacci.txt  fibonacci.yadc  float.txt  if_statement.yadc  io.txt  matrix.yadc  nested_functions.txt  optimizations.yadc  pointers_and_arrays.txt  pointers_function_arguments.txt  strings.txt  while_statement.txt
src/: AbstractSyntaxTree.cpp  AbstractSyntaxTree.h  InstructionsGenerator.cpp  InstructionsGenerator.h  SymbolTable.cpp  SymbolTable.h  grammar.y  main.cpp  parser.y  tokenizer.l
src/analysis/: SyntaxAnalyzer.cpp  SyntaxAnalyzer.h  parser.y  tokenizer.l
src/synthesis/: BuiltinFunctions.cpp  InstructionsGenerator.cpp  InstructionsGenerator.h  Optimizer.cpp  Optimizer.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h
test/: requirements.txt  results.txt  selenium_test.py
test/test_case_1/: expected_output.txt  instructions.txt
test/test_case_2/: expected_output.txt  instructions.txt  src.yadc
test/test_case_3/: instructions.txt  src.yadc
test/test_case_4/: instructions.txt  src.yadc
test/test_case_5/: expected_output.txt  instructions.txt  src.yadc
test/test_case_6/: instructions.txt
test/test_case_7/: input.txt  instructions.txt
test/test_case_8/: instructions.txt  src.yadc
